force-app/main/default/objects/Form_Builder__Project_Metadata__c/Form_Builder__Project_Metadata__c.object-meta.xml
<CustomObject>
    <label>Project Metadata</label>
    <nameField>
        <label>Project Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>