force-app/main/default/objects/Form_Builder__Project_Metadata__c/fields/Form_Builder__DefinitionId__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__DefinitionId__c</fullName>
    <label>DefinitionId</label>
    <length>36</length>
    <type>Text</type>
</CustomField>