force-app/main/default/objects/Form_Builder__Project_Metadata__c/fields/Form_Builder__Description__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Description__c</fullName>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>