force-app/main/default/objects/Form_Builder__Project_Metadata__c/fields/Form_Builder__Disabled__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>