force-app/main/default/objects/Form_Builder__Project_Metadata__c/fields/Form_Builder__FlowId__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__FlowId__c</fullName>
    <label>FlowId</label>
    <length>36</length>
    <type>Text</type>
</CustomField>