force-app/main/default/objects/Form_Builder__Project_Metadata__c/fields/Form_Builder__PublishedDate__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__PublishedDate__c</fullName>
    <label>PublishedDate</label>
    <type>Date</type>
</CustomField>