force-app/main/default/objects/Form_Builder__Project_Metadata__c/fields/Form_Builder__uuid__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__uuid__c</fullName>
    <label>uuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>