force-app/main/default/objects/Form_Builder__Project_Metadata__c/fields/Form_Builder__VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__VersionNumber__c</fullName>
    <label>VersionNumber</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>